...
        android:textColor="@color/black"
        android:text="Make the post public"
        app:layout_constraintTop_toBottomOf="@+id/public_post_text"
        tools:layout_editor_absoluteX="97dp" />

    <CheckBox
        android:id="@+id/public_checkbox"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/public_checkbox_text"
        app:layout_constraintEnd_toEndOf="@id/public_checkbox_text"
...
