...
            android:contentDescription="@string/content_desc_photo"
            app:tint="@color/black" />
    </LinearLayout>

    <!-- Upload Button -->
    <LinearLayout
        android:id="@+id/upload_photo_button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:focusable="true"
...
            android:src="@android:drawable/ic_menu_upload"
            app:tint="@color/black" />
    </LinearLayout>

    <!-- Confirm Button -->
    <LinearLayout
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
...
